# funq

./: .clang-format  .gitignore  .travis.yml  CHANGELOG.md  README  README.rst  appveyor.yml  format-code.sh
.github/workflows/: github-actions.yml  main.yml
ci/: build_and_run_tests.sh  install_dependencies.sh
client/: MANIFEST.in  README  pylint.rc  setup.py
client/doc/: Makefile  conf.py  funq.conf  funq_conf.rst  gkit_aliases.rst  index.rst  launching_tests.rst  libFunq.rst  localise_widget.rst  multi_conf.rst  qml_tutorial.rst  test_attachable.rst  tutorial.rst  tutorial_aliases  tutorial_test_1.py  tutorial_test_widgets.py  user_api.rst  writing_tests.rst
client/doc/user_api/: applicationconfig.rst  funqclient.rst  testcase.rst  widgets_models.rst
client/funq/: __init__.py  aliases-gkits.conf  aliases.py  client.py  errors.py  models.py  noseplugin.py  pytest_plugin.py  screenshoter.py  testcase.py  tools.py
client/funq/tests/: __init__.py  test_aliases.py  test_client.py  test_models.py  test_noseplugin.py  test_screenshoter.py  test_tools.py
client/tests/: test_aliases.py  test_client.py  test_models.py  test_noseplugin.py  test_screenshoter.py  test_tools.py
cpp/: funq.pro  run_tests_lcov.sh  scleHooq.pro  setup.py
cpp/funq/: attacher.cpp  attacher.h  funq.pro  main.cpp
cpp/funq_server/: runner.py  runner_linux.py  runner_win.py
cpp/libFunq/: WindowsInjector.cpp  WindowsInjector.h  dragndropresponse.cpp  dragndropresponse.h  funq.cpp  funq.h  libFunq.pro  objectpath.cpp  objectpath.h  pick.cpp  pick.h  player.cpp  player.h  shortcutresponse.cpp  shortcutresponse.h  windowsInjector.cpp
cpp/player_tester/: fenPrincipale.h  main.cpp  player_tester.pro
cpp/protocole/: delayedresponse.cpp  delayedresponse.h  jsonclient.cpp  jsonclient.h  protocole.cpp  protocole.h  protocole.pri
cpp/scleHooq/: CanaryEvent.cpp  CanaryEvent.h  Communication.h  EntryPoint.cpp  Event.cpp  Event.h  InjectedImport.h  Logger.cpp  Logger.h  Makefile.hooq  Marshall.cpp  Marshall.h  ObjectHookName.cpp  ObjectHookName.h  Player.cpp  Player.h  WinDll.cpp  WinDll.h  WindowsInjector.h  hooq.pri  injectedHooq.pro  ldPreloadInjector.cpp  scleHook.cpp  scleHook.h  scleHooq.pro  windowsInjector.cpp
cpp/scleHooqAttach/: main.cpp  scleHooqAttach.pro  sclehooqattacher.cpp  sclehooqattacher.h
cpp/tests/: unittests.pro
cpp/tests/libFunq/: libFunq.pro  test.cpp
cpp/tests/protocole/: protocole.pro  test.cpp
doc-dev/: Makefile  conf.py  general.rst  index.rst  make.bat  server.rst
py/: MANIFEST.in  README  pylint.rc  setup.py
py/doc/: Makefile  conf.py  funq_conf.rst  funqclient.rst  gkit_aliases.rst  index.rst  libFunq.rst  localise_widget.rst  make.bat  multi_conf.rst  nose_integration.rst  scleHooq.rst  scletest.conf  scletest_conf.rst  test_attachable.rst  tutorial.rst  tutorial_aliases  tutorial_funq.conf  tutorial_test_1.py  tutorial_test_widgets.py  user_api.rst  writing_tests.rst
py/doc/api/: api.rst  scletest.models.rst  scletest.sclehooq.rst
py/doc/user_api/: applicationconfig.rst  funqclient.rst  nose_integration.rst  testcase.rst  widgets_models.rst
py/funq/: __init__.py  aliases.py  client.py  errors.py  models.py  noseplugin.py  screenshoter.py  testcase.py  tools.py
py/scletest/: aliases-gkits.conf  aliases.py  models.py  noseplugin.py  sclehooq.py  tools.py
py/test/: test_aliases.py  test_models.py  test_sclehooq.py  test_tools.py
py/tests/: test_aliases.py  test_client.py  test_models.py  test_noseplugin.py  test_screenshoter.py  test_tools.py
server/: CMakeLists.txt  LICENCE-fr.txt  MANIFEST.in  README  funq.pro  run_tests_lcov.sh  setup.py
server/funq_server/: __init__.py  runner.py  runner_linux.py  runner_mac.py  runner_win.py
server/libFunq/: CMakeLists.txt  WindowsInjector.cpp  WindowsInjector.h  dragndrophelpers.cpp  dragndrophelpers.h  dragndropresponse.cpp  dragndropresponse.h  funq.cpp  funq.h  jsonclient.cpp  ldPreloadInjector.cpp  libFunq.pri  libFunq.pro  objectpath.cpp  objectpath.h  pick.cpp  pick.h  player.cpp  player.h  player_commands_gitems.cpp  player_commands_itemmodel.cpp  player_commands_quickitems.cpp  player_utils.cpp  player_utils.h  protocole.cpp  protocole.h  quickdragndropresponse.cpp  quickdragndropresponse.h  shortcutresponse.cpp  shortcutresponse.h
server/player_tester/: CMakeLists.txt  fenPrincipale.cpp  fenPrincipale.h  fenPrincipale.ui  main.cpp  player_tester.pro
server/protocole/: delayedresponse.cpp  delayedresponse.h  json.cpp  json.h  jsonclient.cpp  jsonclient.h  protocole.cpp  protocole.h  protocole.pri
server/tests/: common.pri  unittests.pro
server/tests/libFunq/: CMakeLists.txt  find_by_id.qml  libFunq.pro  sample1.qml  test.cpp  test_click.qml
server/tests/protocole/: CMakeLists.txt  test.cpp
tests-functionnal/: app_test.alias  app_test.py  base.py  funq.conf  run_app.sh  setup.cfg  test_action.py  test_click.py  test_combobox.py  test_gitems.py  test_injection.py  test_qml_item_children.py  test_retrieve_widget.py  test_screenshot.py  test_shortcut.py  test_tableview.py  test_widget.py
tests-functionnal/funq-test-app/: CMakeLists.txt  funq-test-app.pro  main.cpp  widgets.h
tests-functionnal/funq-test-qml-app/: CMakeLists.txt  funq-test-qml-app.pro  main.cpp  resources.qrc
tests-functionnal/funq-test-qml-app/qml/: children.qml
tests-functionnal/qml/: Children.qml
